--- a/style.css
+++ b/style.css
@@ -9,17 +9,22 @@ input {
   padding: 10px;
   border: 1px solid #5f9341;
   box-sizing: border-box;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
 }
 
 button {
   cursor: pointer;
   border: none;
   background: #5f9341;
-  padding: 10px 20px;
+  border: 1px solid #5f9341;
+  padding: 10px 15px;
   color: #fff;
-  font-size: 18px;
   font-weight: bold;
+}
+
+#delete-btn {
+  background: #fff;
+  color: #5f9341;
 }
 
 ul {
